--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fruit Burst</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
@@ -15,12 +15,11 @@
         .mainClr {
             color: #F85559
         }
-
     </style>
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg" style="background: #F85559;">
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +51,7 @@
 
                 </div>
                 <div class="right ">
-                    <form class="form-inline my-2 my-lg-0 d-flex bg-white rounded-pill border-0 px-3">
+                    <form class="form-inline my-2 my-lg-0 d-flex bg-white rounded-pill border-0 px-3 px-2 mx-3">
                         <input class="mr-sm-2 border-0 rounded-pill" type="search" placeholder="Search"
                             aria-label="Search">
                         <img src="images/search.png" alt="">
@@ -113,9 +112,11 @@
             </div>
             <div class="d-block overflow-hidden w-75 justify-content-around  position-absolute bottom-50"
                 style="left: 40%;">
-                <h4 class="text-white">Exotic tastes at your doorstep</h4>
-                <span class="text-white">We supply highly quality organic products</span>
-                <div class="d-flex justify-content-center container">
+                <div class="">
+                    <h4 class="text-white fw-bolder fs-2">Exotic tastes at your doorstep</h4>
+                    <span class="text-white">We supply highly quality organic products</span>
+                </div>
+                <div class="d-flex container mt-3">
                     <button class=" d-block btn mainBgClr text-white">Shop Now</button>
                 </div>
             </div>
@@ -277,40 +278,33 @@
 
     </section>
     </main>
-    <footer class="bg-dark container d-flex justify-content-center mt-5">
-        <div>
+    <footer class="bg-dark container d-flex justify-content-center align-content-center mt-5">
+        <div class="justify-content-center">
             <div class="pt-5">
-                <div class="d-flex align-items-center">
+                <div class="d-flex justify-content-center align-items-center">
                     <img src="images/logo.png" alt="">
                     <h4 class="text-white">Fruit Burst</h4>
                 </div>
-                <div class="left ">
-                    <div>
-                        <ul class="navbar-nav mr-auto d-flex justify-content-around">
-        
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Shop</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">All fruits</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Support</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">My account</a>
-                            </li>
-                        </ul>
-                    </div>
+                <div>
+                    <ul class="d-flex gap-5 pt-4">
+                        <li><a class="text-decoration-none text-white" href="">Home</a></li>
+                        <li><a class="text-decoration-none text-white" href="">About us</a></li>
+                        <li><a class="text-decoration-none text-white" href="">Shop</a></li>
+                        <li><a class="text-decoration-none text-white" href="">All fruits</a></li>
+                        <li><a class="text-decoration-none text-white" href="">Support</a></li>
+                        <li><a class="text-decoration-none text-white" href="">My Account</a></li>
+                    </ul>
                 </div>
-        </div>
-       
+                <div class="d-flex justify-content-center gap-5 pt-4 pb-5 ">
+                    <img src="images/twitter (1) 1.png" alt="">
+                    <img src="images/facebook 1 (1).png" alt="">
+                    <img src="images/Group 49.png" alt="">
+                    <img src="images/linkedin 1 (1).png" alt="">
+                    <img src="images/instagram 1.png" alt="">
+                    <img src="images/apple 1.png" alt="">
+                </div>
+            </div>
+
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
